--- a/src/app/components/Input/style.css
+++ b/src/app/components/Input/style.css
@@ -31,8 +31,32 @@
   border-color: #4f91ff;
 }
 
+.input:focus {
+  border-color: #4f91ff;
+}
+
 .input::placeholder {
   font: italic 400 20px/32px 'Red Hat Italic', sans-serif;
   letter-spacing: 0.22px;
   color: #9590a0;
+}
+
+.wrong {
+  position: absolute;
+  right: 262px;
+  top: 12px;
+
+  display: none;
+
+  z-index: 1;
+}
+
+.correct {
+  position: absolute;
+  right: 262px;
+  top: 12px;
+
+  display: none;
+
+  z-index: 1;
 }
