--- a/src/app/components/Item/style.css
+++ b/src/app/components/Item/style.css
@@ -31,6 +31,17 @@
   stroke: #9dc2ff;
 }
 
+.active .text {
+  font-size: 24px;
+  line-height: 36px;
+  color: #eeecf1;
+}
+
+.active .icon path {
+  stroke-width: 3;
+  stroke: #9dc2ff;
+}
+
 @media (max-width: 1399px) {
   .text {
     display: none;
