--- a/src/app/components/Item/style.css
+++ b/src/app/components/Item/style.css
@@ -11,8 +11,7 @@
 .text {
   font: normal 600 20px/32px 'Inter Medium', sans-serif;
   color: #9590a0;
-
-  margin: 0 0 0 20px;
+  margin: 0;
 }
 
 .item:hover .text {
@@ -24,6 +23,10 @@
 .item:hover .icon path {
   stroke-width: 3;
   stroke: #9dc2ff;
+}
+
+.icon {
+  margin-right: 20px;
 }
 
 .active .text {
