Переписал формы, обновил стили, обновил работу с svg

--- a/src/app/components/Forms/AvatarForm/style.css
+++ b/src/app/components/Forms/AvatarForm/style.css
@@ -45,9 +45,10 @@
   border-radius: 99px;
   top: 0;
   left: 0;
+  outline: none;
   -webkit-user-select: none;
   cursor: pointer;
-  padding: 17px 15px 15px;
+  padding: 17px 15px 15px 15px;
 }
 .input:hover::before {
   border-color: black;
@@ -61,65 +62,21 @@ input[type='file'] {
   border: none;
 }
 
-.wronginput {
-  border-color: #f6655a;
-}
-
-.correctinput {
-  border-color: #87c289;
-}
-
-.wrong {
-  position: absolute;
-  right: 262px;
-  top: 12px;
-
-  display: none;
-
-  z-index: 1;
-}
-
-.correct {
-  position: absolute;
-  right: 262px;
-  top: 12px;
-
-  display: none;
-
-  z-index: 1;
-}
-
 .error {
-  height: 24px;
+  text-align: center;
+}
 
-  font: normal normal 16px/24px 'Inter Regular', sans-serif;
-  letter-spacing: 0.12px;
-  color: #7a7585;
-
-  box-sizing: border-box;
-  margin: 5px 0;
-  padding-left: 6px;
+.wrapper {
+  margin-left: 178px;
+  width: 337px;
 }
 
 .label {
   font: normal 400 20px/32px 'Inter Regular', sans-serif;
   color: #eeecf1;
   letter-spacing: 0.22px;
-  margin-right: 24px;
+  margin: 12px 40px 0 0;
 
   width: 157px;
   text-align: right;
-  margin-top: 12px;
-}
-
-.wrapper {
-  display: flex;
-  align-items: flex-start;
-  position: relative;
-}
-
-.icon {
-  position: absolute;
-  top: 12px;
-  left: 478px;
 }
