--- a/src/app/components/Error/style.css
+++ b/src/app/components/Error/style.css
@@ -1,9 +1,9 @@
 .error {
   height: 24px;
 
-  font: normal 500 16px/24px 'Inter Medium', sans-serif;
-  letter-spacing: 0.44px;
-  color: #eeecf1;
+  font: normal normal 16px/24px 'Inter Regular', sans-serif;
+  letter-spacing: 0.12px;
+  color: #7a7585;
 
   box-sizing: border-box;
   margin: 5px 0;
