--- a/src/app/components/Item/style.css
+++ b/src/app/components/Item/style.css
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
 
-  padding: 0 10px;
+  padding: 0;
   margin: 0 0 40px;
 
   cursor: pointer;
@@ -20,12 +20,12 @@
   color: #eeecf1;
 }
 
-.item:hover .icon path {
+.item:hover svg path {
   stroke-width: 3;
   stroke: #9dc2ff;
 }
 
-.icon {
+.item svg {
   margin-right: 20px;
 }
 
@@ -35,7 +35,7 @@
   color: #eeecf1;
 }
 
-.active .icon path {
+.active svg path {
   stroke-width: 3;
   stroke: #9dc2ff;
 }
@@ -43,5 +43,13 @@
 @media (max-width: 1399px) {
   .text {
     display: none;
+  }
+
+  .item {
+    justify-content: center;
+  }
+
+  .item svg {
+    margin-right: 0;
   }
 }
