--- a/src/app/containers/Score/style.css
+++ b/src/app/containers/Score/style.css
@@ -89,6 +89,16 @@
   margin-bottom: 30px;
 }
 
+.button {
+  background: none;
+  width: auto;
+
+  margin-top: auto;
+  margin-bottom: 0;
+
+  padding: 0;
+}
+
 @media (max-width: 1399px) {
   .exit svg {
     position: absolute;
