Унифицировал основную навигацию, подправил стили

--- a/src/app/components/ExitButton/style.css
+++ b/src/app/components/ExitButton/style.css
@@ -3,9 +3,17 @@
   background: none;
   border: none;
 
+  height: 56px;
+
   padding: 0;
 }
 
 .button li {
   margin-bottom: 0;
+}
+
+@media (max-width: 1399px) {
+  .button {
+    margin-left: -5px;
+  }
 }
