--- a/src/app/components/Navigation/style.css
+++ b/src/app/components/Navigation/style.css
@@ -1,18 +1,23 @@
-.navigation {
-  display: flex;
-  flex-direction: column;
+.list {
+  padding: 0;
 }
 
-.title {
-  font: normal bold 14px/16px 'Inter Bold', sans-serif;
-  letter-spacing: 0.75px;
-  color: #605b6a;
-  padding: 0 0 19px 15px;
-  border-bottom: 1px solid #605b6a;
+.link {
+  text-decoration: none;
+}
+
+.exit {
+  margin-top: auto;
+  margin-bottom: 0;
+}
+
+.active {
+  color: #9dc2ff;
+  text-decoration: underline;
 }
 
 @media (max-width: 1399px) {
-  .title {
-    display: none;
+  .exit svg {
+    position: absolute;
   }
 }
