--- a/src/app/components/Sidebar/style.css
+++ b/src/app/components/Sidebar/style.css
@@ -2,10 +2,15 @@
   box-sizing: border-box;
   background: #000000;
 
+  display: flex;
+  flex-direction: column;
+
   padding: 24px;
+
+  min-width: 96px;
   width: 378px;
 
-  overflow-y: hidden;
+  overflow: hidden;
 }
 
 .avatar {
