--- a/src/app/components/SubNavigation/style.css
+++ b/src/app/components/SubNavigation/style.css
@@ -8,3 +8,22 @@
   letter-spacing: 0.22px;
   color: #7a7585;
 }
+
+.sublink {
+  font: normal 700 14px/17px 'Inter Bold', sans-serif;
+  letter-spacing: 0.75px;
+  color: #eeecf1;
+  text-decoration: none;
+
+  margin-bottom: 16px;
+}
+
+.sublink:hover {
+  text-decoration: underline;
+  color: #9dc2ff;
+}
+
+.active {
+  color: #9dc2ff;
+  text-decoration: underline;
+}
