--- a/src/app/components/Canvas/style.css
+++ b/src/app/components/Canvas/style.css
@@ -1,4 +1,10 @@
+.canvasWrapper,
+.canvasWrapper * {
+  box-sizing: border-box;
+}
+
 .canvasWrapper {
+  position: relative;
   width: 100%;
   height: 100%;
 }
@@ -8,7 +14,48 @@
 }
 
 .score {
-  font-size: 20px;
-  color: white;
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  z-index: 1;
+
+  height: 40px;
+  padding: 15px 20px;
+
+  font: normal 400 20px/32px 'Inter Regular', sans-serif;
+
   user-select: none;
+}
+
+.popup {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 2;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  width: 100%;
+  height: 100%;
+
+  font: normal 400 20px/32px 'Inter Regular', sans-serif;
+  text-align: center;
+
+  background-color: white;
+  padding: 50px;
+}
+
+.popupButton {
+  margin-top: 40px;
+  padding: 0;
+
+  background-color: red;
+  border: none;
+  outline: none;
+
+  cursor: pointer;
 }
