--- a/src/app/components/Description/style.css
+++ b/src/app/components/Description/style.css
@@ -4,14 +4,14 @@
 
 .title {
   font: normal 700 24px/36px 'Inter Bold', sans-serif;
-  color: #eeecf1;
+  color: var(--text-color);
 
   margin: 0;
 }
 
 .subtitle {
   font: normal 400 20px/32px 'Inter Regular', sans-serif;
-  color: #eeecf1;
+  color: var(--text-color);
 
   margin: 0;
 }
