--- a/src/app/components/OfflineBar/style.css
+++ b/src/app/components/OfflineBar/style.css
@@ -11,7 +11,7 @@
 
   height: 40px;
 
-  color: #fff;
+  color: white;
   font: normal 400 16px/28px 'Inter Regular', sans-serif;
   text-align: center;
 
