--- a/src/app/components/Label/style.css
+++ b/src/app/components/Label/style.css
@@ -1,6 +1,6 @@
 .label {
   font: normal 400 20px/32px 'Inter Regular', sans-serif;
-  color: #eeecf1;
+  color: var(--text-color);
   letter-spacing: 0.22px;
   margin-right: 24px;
 }
