[GOTY-56] настроил mongoose и отправку фидбека

--- a/src/app/components/Forms/FeedbackForm/style.css
+++ b/src/app/components/Forms/FeedbackForm/style.css
@@ -10,3 +10,8 @@
 .button {
   margin-bottom: 20px;
 }
+
+.feedbackSuccess {
+  font: normal 400 20px/32px 'Inter Regular', sans-serif;
+  color: var(--text-color);
+}
