--- a/src/app/containers/Feed/style.css
+++ b/src/app/containers/Feed/style.css
@@ -1,4 +1,4 @@
-.signup {
+.feed {
   display: flex;
   width: 100%;
   height: 100vh;
@@ -6,4 +6,59 @@
 
 .avatar {
   margin-bottom: 45px;
+}
+
+.container {
+  box-sizing: border-box;
+
+  display: flex;
+  align-items: flex-start;
+
+  padding: 0 41px;
+  height: 100vh;
+}
+
+.title {
+  margin: 112px 60px 0 0;
+}
+
+.overflow {
+  box-sizing: border-box;
+  padding-top: 120px;
+  padding-bottom: 40px;
+  height: 100vh;
+
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+  overflow: scroll;
+}
+
+.overflow::-webkit-scrollbar {
+  display: none;
+}
+
+.description {
+  margin-top: 120px;
+  margin-bottom: 30px;
+}
+
+.list {
+  padding: 0;
+  height: calc(100vh - 212px);
+}
+
+.table {
+  box-sizing: border-box;
+
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+
+  font: normal 700 14px/16px 'Inter Bold', sans-serif;
+  letter-spacing: 0.75px;
+  color: #605b6a;
+
+  border-bottom: 1px solid #3c3844;
+
+  margin-bottom: 30px;
 }
