--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -4,6 +4,7 @@
   --field-color: #2a2731;
   --accent-color: #2264d1;
   --text-color: #eeecf1;
+  --article-bg-color: #1c1a22;
   --sub-text-color: #7a7585;
   --input-correct: #87c289;
   --input-wrong: #f6655a;
