--- a/src/app/components/NewsList/style.css
+++ b/src/app/components/NewsList/style.css
@@ -88,10 +88,28 @@
 
 .comment {
   display: flex;
+
+  position: relative;
 }
 
 .comment:not(:last-child) {
   margin-block: 20px;
+}
+
+.commentDelete {
+  position: absolute;
+  top: 0;
+  right: 0;
+
+  font: normal 700 12px/18px 'Inter Regular', sans-serif;
+  color: var(--input-wrong);
+
+  padding: 0;
+
+  background: none;
+  border: none;
+
+  cursor: pointer;
 }
 
 .commentAvatar {
