[GOTY-59] поправил логирующую функцию

--- a/src/app/components/Canvas/style.css
+++ b/src/app/components/Canvas/style.css
@@ -23,7 +23,7 @@
   height: 40px;
   padding: 15px 20px;
 
-  font: normal 400 20px/32px 'Inter Regular', sans-serif;
+  font: normal 400 20px/32px var(--regular-font);
 
   user-select: none;
 }
@@ -42,7 +42,7 @@
   width: 100%;
   height: 100%;
 
-  font: normal 400 20px/32px 'Inter Regular', sans-serif;
+  font: normal 400 20px/32px var(--regular-font);
   text-align: center;
 
   background-color: white;
