--- a/src/app/components/OfflineBar/style.css
+++ b/src/app/components/OfflineBar/style.css
@@ -12,7 +12,7 @@
   height: 40px;
 
   color: white;
-  font: normal 400 16px/28px 'Inter Regular', sans-serif;
+  font: normal 400 16px/28px var(--regular-font);
   text-align: center;
 
   background-color: #f6655a;
