--- a/src/app/components/SubNavigation/style.css
+++ b/src/app/components/SubNavigation/style.css
@@ -10,7 +10,7 @@
 }
 
 .sublink {
-  font: normal 700 14px/17px 'Inter Bold', sans-serif;
+  font: normal 700 14px/17px var(--bold-font);
   letter-spacing: 0.75px;
   color: var(--text-color);
   text-decoration: none;
