--- a/src/app/components/UserScore/style.css
+++ b/src/app/components/UserScore/style.css
@@ -18,7 +18,7 @@
 }
 
 .name {
-  font: normal 700 20px/36px 'Inter Bold', sans-serif;
+  font: normal 700 20px/36px var(--bold-font);
   letter-spacing: 0.22px;
   color: #9590a0;
 
@@ -34,7 +34,7 @@
 
   padding: 0 10px;
 
-  font: normal 700 14px/16px 'Inter Bold', sans-serif;
+  font: normal 700 14px/16px var(--bold-font);
   letter-spacing: 0.75px;
   color: #c4daff;
   text-align: right;
