--- a/src/app/containers/Score/style.css
+++ b/src/app/containers/Score/style.css
@@ -52,7 +52,7 @@
   justify-content: space-between;
   padding: 10px;
 
-  font: normal 700 14px/16px 'Inter Bold', sans-serif;
+  font: normal 700 14px/16px var(--bold-font);
   letter-spacing: 0.75px;
   color: #605b6a;
 
