--- a/src/app/components/Avatar/style.css
+++ b/src/app/components/Avatar/style.css
@@ -9,7 +9,7 @@
 }
 
 .title {
-  font: normal bold 34px/44px 'Inter Bold', sans-serif;
+  font: normal bold 34px/44px var(--bold-font);
   letter-spacing: -0.56px;
   color: #9590a0;
 
