--- a/src/app/components/Button/style.css
+++ b/src/app/components/Button/style.css
@@ -2,7 +2,7 @@
   width: 337px;
   height: 56px;
 
-  font: normal 700 24px/36px 'Inter Bold', sans-serif;
+  font: normal 700 24px/36px var(--bold-font);
   color: var(--second-color);
 
   background: #ffb41f;
