--- a/src/app/components/Error/style.css
+++ b/src/app/components/Error/style.css
@@ -1,7 +1,7 @@
 .error {
   height: 24px;
 
-  font: normal normal 16px/24px 'Inter Regular', sans-serif;
+  font: normal normal 16px/24px var(--regular-font);
   letter-spacing: 0.12px;
   color: var(--sub-text-color);
 
