--- a/src/app/components/Forms/AvatarForm/style.css
+++ b/src/app/components/Forms/AvatarForm/style.css
@@ -2,7 +2,7 @@
   width: 337px;
   height: 56px;
 
-  font: normal 400 20px/32px 'Inter Regular', sans-serif;
+  font: normal 400 20px/32px var(--regular-font);
   letter-spacing: 0.22px;
   color: var(--text-color);
 
@@ -36,7 +36,7 @@
 }
 .input::before {
   position: absolute;
-  font: normal 400 16px/24px 'Inter Regular', sans-serif;
+  font: normal 400 16px/24px var(--regular-font);
   letter-spacing: 0.22px;
   color: var(--text-color);
   content: 'Choose image';
@@ -72,7 +72,7 @@ input[type='file'] {
 }
 
 .label {
-  font: normal 400 20px/32px 'Inter Regular', sans-serif;
+  font: normal 400 20px/32px var(--regular-font);
   color: var(--text-color);
   letter-spacing: 0.22px;
   margin: 12px 40px 0 0;
