--- a/src/app/components/Label/style.css
+++ b/src/app/components/Label/style.css
@@ -1,5 +1,5 @@
 .label {
-  font: normal 400 20px/32px 'Inter Regular', sans-serif;
+  font: normal 400 20px/32px var(--regular-font);
   color: var(--text-color);
   letter-spacing: 0.22px;
   margin-right: 24px;
