--- a/src/app/components/Theme/style.css
+++ b/src/app/components/Theme/style.css
@@ -6,7 +6,7 @@
   width: auto;
   height: auto;
 
-  font: normal 400 16px/24px 'Inter Regular', sans-serif;
+  font: normal 400 16px/24px var(--regular-font);
   color: var(--second-color);
 
   background: white;
