--- a/src/app/components/Title/style.css
+++ b/src/app/components/Title/style.css
@@ -1,5 +1,5 @@
 .title {
-  font: normal 700 48px/56px 'Inter Bold', sans-serif;
+  font: normal 700 48px/56px var(--bold-font);
   color: var(--text-color);
   letter-spacing: -1.25px;
 }
