--- a/src/app/components/Canvas/style.css
+++ b/src/app/components/Canvas/style.css
@@ -34,6 +34,23 @@
   right: 0;
 }
 
+.stars {
+  display: flex;
+}
+
+.stars img {
+  width: 15px;
+
+  margin-right: 10px;
+
+  object-fit: contain;
+  object-position: center;
+}
+
+.stars img:first-child {
+  margin-left: 10px;
+}
+
 .boostItem {
   display: flex;
   align-items: center;
