--- a/src/app/components/Canvas/style.css
+++ b/src/app/components/Canvas/style.css
@@ -131,9 +131,9 @@
 
 .popupButton {
   margin-top: 40px;
-  padding: 0;
+  padding: 5px 10px;
 
-  background-color: red;
+  background-color: #fd5151;
   border: none;
   outline: none;
 
